HW6 add i18 for meals

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,17 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.dateTime=DateTime
+meal.description=Description
+meal.calories=Calories
+meal.create=Create meal
+meal.edit=Edit meal
+meal.filter.fromDate=From Date (inclusive)
+meal.filter.toDate=To Date (inclusive)
+meal.filter.fromTime=From Time (inclusive)
+meal.filter.toTime=To Time (inclusive)
+meal.filter=Filter
+meal.addNew=Add Meal
 common.select=Select
+common.save=Save
+common.cancel=Cancel
